--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,448 +1,465 @@
-/* Navbar container */
-/* section hero*/
-/**************************/
-/* FEATURED IN SECTION */
-/**************************/
-/**************************/
-/* TESTIMONIALS SECTION */
-/**************************/
-/* SECTION VIDEO*/
-/*/
-/*/
-* {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-	text-transform: capitalize;
-	text-decoration: none;
-}
+@import url("../styles/normalize.css");
+
+$width: 1920;
+
 html {
-	font-size: 62.5%;
-	overflow-x: hidden;
+  overflow-x: hidden;
 }
 body {
-	font-family: "Raleway", sans-serif;
-	line-height: 1;
-	font-weight: 400;
-	color: #555;
-	overflow-x: hidden;
+  font-family: "Raleway", sans-serif;
+  line-height: 1;
+  font-weight: 400;
+  color: #555;
+  overflow-x: hidden;
+}
+.container-large {
+  max-width: 1170 / $width * 100vw;
+  margin: 0 auto;
 }
 .header__wrapper-top {
-	.inner {
-		display: flex;
-		flex-wrap: nowrap;
-		justify-content: space-between;
-		align-items: center;
-		max-width: 125rem;
-		margin: 0 auto;
-	}
+  .inner {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1250 / $width * 100vw;
+    margin: 0 auto;
+  }
 }
 .header {
-	.inner {
-		.item {
-			width: max-content;
-		}
-	}
-	p {
-		font-family: Raleway;
-		font-style: 500;
-		font-size: 1.6rem;
-		line-height: 2.2rem;
-		color: #000;
-	}
-	a {
-		font-family: Raleway;
-		font-style: 700;
-		font-size: 1.8rem;
-		line-height: 2.2rem;
-		color: #000;
-	}
-	img {
-		margin: 2rem 0 0 0;
-		height: 7rem;
-	}
+  .inner {
+    .item {
+      width: max-content;
+    }
+  }
+  p {
+    font-family: Raleway;
+    font-style: 500;
+    font-size: 16px;
+    line-height: 22px;
+    color: #000;
+  }
+  a {
+    font-family: Raleway;
+    font-style: 700;
+    font-size: 18px;
+    line-height: 22px;
+    color: #000;
+  }
+  img {
+    margin: 20px 0 0 0;
+    height: 70px;
+  }
 }
 .home-icon {
-	height: 3rem;
-	width: 3rem;
-	color: #fff;
+  height: 30px;
+  width: 30px;
+  color: #fff;
 }
 .dropdown {
-	font-family: Raleway;
-	background-color: #386641;
-	max-width: 192rem;
-	position: static;
-	top: 12rem;
-	padding: 0.5rem;
-	border: 0.2rem solid #4caf50;
-	font-style: 600;
-	left: 0;
-	right: 0;
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-	z-index: 1000;
-	padding: 1rem 7%;
-	.header__wrapper-bottom {
-		ul {
-			list-style: none;
-			li {
-				position: relative;
-				float: left;
-				a {
-					font-size: 1.6rem;
-					padding: 0.8rem;
-					color: white;
-					display: block;
-					&:hover {
-						transition: all 5s;
-						text-decoration: underline yellow;
-					}
-				}
-				ul {
-					position: absolute;
-					left: 0;
-					width: 200px;
-					background-color: rgba(56, 102, 65, 0.795);
-					display: none;
-					li {
-						width: 100%;
-						border-top: 1px solid rgba(56, 102, 65, 0.795);
-					}
-				}
-				&:hover {
-					>ul {
-						display: initial;
-					}
-				}
-			}
-		}
-	}
+  font-family: Raleway;
+  background-color: #386641;
+  max-width: 1920 / $width * 100vw;
+  position: static;
+  top: 120px;
+  padding: 5px;
+  border: 2px solid #4caf50;
+  font-style: 600;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  z-index: 1000;
+  padding: 10px 7%;
+  .header__wrapper-bottom {
+    ul {
+      list-style: none;
+      li {
+        position: relative;
+        float: left;
+        a {
+          font-size: 16px;
+          padding: 8px;
+          color: white;
+          display: block;
+          &:hover {
+            transition: all 5s;
+            text-decoration: underline yellow;
+          }
+        }
+        ul {
+          position: absolute;
+          left: 0;
+          width: 200px;
+          background-color: rgba(56, 102, 65, 0.795);
+          display: none;
+          li {
+            width: 100%;
+            border-top: 1px solid rgba(56, 102, 65, 0.795);
+          }
+        }
+        &:hover {
+          > ul {
+            display: initial;
+          }
+        }
+      }
+    }
+  }
 }
 .section-hero {
-	.btn {
-		margin-left: 35rem;
-	}
-	max-width: 192rem;
-	background-color: white;
-	padding: 0 2rem 29.6rem 0;
+  .btn {
+    margin-left: 350px;
+  }
+  max-width: 1920 / $width * 100vw;
+  background-color: white;
+  padding: 0 20px 30px 0;
 }
 .section-video {
-	.btn {
-		margin-left: 35rem;
-	}
-	max-width: 192rem;
-	background-image: url("../images/Rectangle 101.png");
-	margin-top: 0 auto;
-	position: relative;
+  .btn {
+    margin-left: 350px;
+  }
+  max-width: 1920 / $width * 100vw;
+  background-image: url("../images/Rectangle 101.png");
+  margin-top: 0 auto;
+  position: relative;
 }
 .btn {
-	display: inline-block;
-	font-style: 600;
-	font-family: Raleway;
-	background-color: yellow;
-	text-decoration: none;
-	font-size: 2rem;
-	font-weight: 600;
-	padding: 1.6rem 3.2rem;
-	border-radius: 150px;
-	border: none;
-	cursor: pointer;
-	transition: all 0.3s;
-	color: #fff;
-	&:link {
-		display: inline-block;
-		font-style: 600;
-		font-family: Raleway;
-		background-color: yellow;
-		text-decoration: none;
-		font-size: 2rem;
-		font-weight: 600;
-		padding: 1.6rem 3.2rem;
-		border-radius: 150px;
-		border: none;
-		cursor: pointer;
-		transition: all 0.3s;
-		color: #fff;
-	}
-	&:visited {
-		display: inline-block;
-		font-style: 600;
-		font-family: Raleway;
-		background-color: yellow;
-		text-decoration: none;
-		font-size: 2rem;
-		font-weight: 600;
-		padding: 1.6rem 3.2rem;
-		border-radius: 150px;
-		border: none;
-		cursor: pointer;
-		transition: all 0.3s;
-		color: #fff;
-	}
-	&:hover {
-		background-color: rgba(9, 44, 9, 0.651);
-	}
-	&:active {
-		background-color: rgba(9, 44, 9, 0.651);
-	}
+  display: inline-block;
+  font-style: 600;
+  font-family: Raleway;
+  background-color: yellow;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 600;
+  padding: 16px 32px;
+  border-radius: 150px;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s;
+  color: #fff;
+  &:link {
+    display: inline-block;
+    font-style: 600;
+    font-family: Raleway;
+    background-color: yellow;
+    text-decoration: none;
+    font-size: 2rem;
+    font-weight: 600;
+    padding: 16px 32px;
+    border-radius: 150px;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s;
+    color: #fff;
+  }
+  &:visited {
+    display: inline-block;
+    font-style: 600;
+    font-family: Raleway;
+    background-color: yellow;
+    text-decoration: none;
+    font-size: 2rem;
+    font-weight: 600;
+    padding: 16px 32px;
+    border-radius: 150px;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s;
+    color: #fff;
+  }
+  &:hover {
+    background-color: rgba(9, 44, 9, 0.651);
+  }
+  &:active {
+    background-color: rgba(9, 44, 9, 0.651);
+  }
 }
 .hero {
-	margin: 0 auto;
-	padding: 0 auto;
-	display: grid;
-	grid-template-columns: 2fr 3fr;
-	gap: 9.6rem;
-	align-items: center;
-	justify-content: space-between;
+  margin: 0 auto;
+  padding: 0 auto;
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  gap: 96px;
+  align-items: center;
+  justify-content: space-between;
 }
 .hero-description {
-	margin-left: 35rem;
-	font-size: 2rem;
-	line-height: 1.6;
-	margin-bottom: 4.8rem;
+  margin-left: 350px;
+  font-size: 20px;
+  line-height: 1.6;
+  margin-bottom: 48px;
 }
 .hero-img {
-	width: 100%;
+  width: 100%;
 }
 .heading-primary {
-	font-weight: 700;
-	color: #333;
-	letter-spacing: -0.5px;
-	font-size: 5.2rem;
-	line-height: 1.05;
-	margin-left: 35rem;
-	margin-top: 3.2rem;
-	margin-bottom: 3.2rem;
+  font-weight: 700;
+  color: #333;
+  letter-spacing: -0.5px;
+  font-size: 52px;
+  line-height: 1.05;
+  margin-left: 350px;
+  margin-top: 32px;
+  margin-bottom: 32px;
 }
 .tag-title {
-	font-size: 2.2rem;
-	line-height: 1.05;
-	margin-left: 35rem;
-	margin-top: 3.2rem;
-	margin-bottom: 3.2rem;
+  font-size: 22px;
+  line-height: 1.05;
+  margin-left: 350px;
+  margin-top: 32px;
+  margin-bottom: 32px;
 }
 .section-quality {
-	max-width: 192rem;
-	padding: 0 auto;
-	background-color: #dce4cc;
+  max-width: 1920 / $width * 100vw;
+  padding: 0 auto;
+  background-color: #dce4cc;
 }
 .container {
-	font-size: 1.4rem;
-	text-transform: uppercase;
-	letter-spacing: 0.75px;
-	font-weight: 500;
-	text-align: center;
-	color: #888;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 0.75px;
+  font-weight: 500;
+  text-align: center;
+  color: #888;
 }
 .logos {
-	display: flex;
-	justify-content: center;
-	img {
-		height: 100%;
-	}
+  display: flex;
+  justify-content: center;
+  img {
+    height: 100%;
+  }
 }
 .section-testimonials {
-	background-image: url("../images/image 32.png");
-	grid-template-rows: 0.5fr 2fr;
-	align-items: center;
-	.hero-description {
-		font-size: 1.6rem;
-		padding-top: 2.6rem;
-		margin-left: 1rem;
-		margin-right: 35rem;
-	}
+  background-image: url("../images/image 32.png");
+  grid-template-rows: 0.5fr 2fr;
+  align-items: center;
+  .hero-description {
+    font-size: 16px;
+    padding-top: 26px;
+    margin-left: 10px;
+    margin-right: 350px;
+  }
 }
 .color {
-	background-color: rgba(242, 248, 244, 0.884);
+  background-color: rgba(242, 248, 244, 0.884);
 }
 .testimonials-container {
-	padding: 2.6rem;
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
+  padding: 26px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 .gallery {
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	gap: 1.6rem;
-	padding: 1.6rem;
-	padding-left: 35rem;
-	padding-right: 35rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 16px;
+  padding: 16px;
+  padding-left: 42px;
+  padding-right: 35px;
 }
 .gallery-item {
-	overflow: hidden;
-	img {
-		display: block;
-		width: 100%;
-	}
+  overflow: hidden;
+  img {
+    display: block;
+    width: 100%;
+  }
 }
 .gallery-content {
-	font-family: Raleway;
-	font-style: 500;
-	font-size: 1.6rem;
-	line-height: 2.2rem;
-	color: #000;
-	min-height: 60px;
-	padding: 0 44px 0 20px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	transition: 0.5s;
-	background-color: white;
+  font-family: Raleway;
+  font-style: 500;
+  font-size: 16px;
+  line-height: 22px;
+  color: #000;
+  min-height: 60px;
+  padding: 0 44px 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: 0.5s;
+  background-color: white;
 }
 .tag {
-	display: block;
-	font-weight: 700;
-	font-size: 18px;
-	line-height: 2.2rem;
-	color: #202020;
+  display: block;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  color: #202020;
 }
 .gallery-transform {
-	display: block;
-	width: 100%;
-	transition: all 0.4s;
-	&:hover {
-		transform: scale(1.05);
-	}
+  display: block;
+  width: 100%;
+  transition: all 0.4s;
+  &:hover {
+    transform: scale(1.05);
+  }
 }
 .video {
-	display: grid;
-	grid-template-columns: 1fr 3fr;
-	gap: 9.6rem;
-	align-items: center;
-	justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 96px;
+  align-items: center;
+  justify-content: space-between;
 }
 .video-primary {
-	font-size: 5.2rem;
-	line-height: 1.05;
-	margin-left: 35rem;
-	margin-right: 10rem;
-	margin-top: 3.2rem;
-	margin-bottom: 3.2rem;
-	white-space: nowrap;
+  font-size: 52px;
+  line-height: 1.05;
+  margin-left: 350px;
+  margin-right: 100px;
+  margin-top: 32px;
+  margin-bottom: 32px;
+  white-space: nowrap;
 }
 .video-description {
-	margin-left: 35rem;
-	font-size: 2rem;
-	line-height: 1.6;
-	margin-bottom: 2.8rem;
+  margin-left: 350px;
+  font-size: 20px;
+  line-height: 1.6;
+  margin-bottom: 28px;
 }
 .video-img {
-	width: 70%;
-	border: 20px solid white;
+  width: 70%;
+  border: 20px solid white;
 }
 .video-text-box {
-	color: white;
-	padding: 1.6rem;
-	display: flexbox;
+  color: white;
+  padding: 16px;
+  display: flexbox;
 }
 span {
-	color: white;
-	font-weight: 900;
+  color: white;
+  font-weight: 900;
 }
 .vector-img {
-	position: absolute;
-	bottom: 20rem;
-	right: 45rem;
-	width: 1.5%;
+  position: absolute;
+  bottom: 200px;
+  right: 450px;
+  width: 1.5%;
 }
-/////////////////////// {
-	.favorites {
-		background: #f5f5f5;
-	}
+
+.favorites {
+  background: #f5f5f5;
+  h2 {
+    font-size: 44px;
+    line-height: 52px;
+    color: #202020;
+    margin-bottom: 50px;
+  }
 }
+
 .favorites__body {
-	padding: 60px 0;
-	text-align: center;
-	h2 {
-		font-size: 44px;
-		line-height: 52px;
-		color: #202020;
-		margin-bottom: 50px;
-	}
+  padding: 60px 0;
+  text-align: center;
+  width: 1170 / $width * 100vw;
 }
 .favorites__carousel {
-	margin-bottom: 30px;
-	display: flex;
+  margin-bottom: 30px;
+  display: flex;
 }
 .tree {
-	flex-shrink: 0;
-	margin: 0 auto;
+  flex-shrink: 0;
+  margin: 0 auto;
 }
 .tree__body {
-	margin: 0 auto;
-	position: relative;
-	padding: 30px 30px 25px;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	width: 285px;
-	height: 410px;
-	background-color: #eee;
-	border-radius: 10px;
-	transition: 0.7s;
-	h3 {
-		font-weight: 700;
-		font-size: 22px;
-		line-height: 30px;
-		color: #202020;
-		margin-bottom: 15px;
-	}
-	&:hover {
-		background: #386641;
-		>.tree__hover {
-			opacity: 1;
-		}
-		>.tree__img {
-			opacity: 0.4;
-		}
-	}
+  margin: 0 auto;
+  position: relative;
+  padding: 30px 30px 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 285px;
+  height: 410px;
+  background-color: #eee;
+  border-radius: 10px;
+  transition: 0.7s;
+  background-size: 222 / $width * 100vw;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  h3 {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 30px;
+    color: #202020;
+    margin-bottom: 15px;
+  }
+  &:hover {
+    background: #386641;
+    > .tree__hover {
+      opacity: 1;
+    }
+    > .tree__img {
+      opacity: 0.4;
+    }
+  }
+}
+
+.sliders {
+  .tree:nth-child(3n + 1) {
+    background-image: url("../images/carousel/carousel_2.png");
+  }
 }
 .tree__img {
-	position: absolute;
-	width: 225px;
-	bottom: 0;
-	z-index: 1;
-	transition: 0.7s;
-	img {
-		-o-object-fit: contain;
-		object-fit: contain;
-		display: inline-block;
-	}
+  position: absolute;
+  width: 225px;
+  bottom: 0;
+  z-index: 1;
+  transition: 0.7s;
+  img {
+    -o-object-fit: contain;
+    object-fit: contain;
+    display: inline-block;
+  }
 }
 .tree__hover {
-	flex-grow: 1;
-	display: flex;
-	flex-direction: column;
-	position: relative;
-	opacity: 0;
-	z-index: 2;
-	transition: 0.7s;
-	p {
-		font-size: 14px;
-		line-height: 21px;
-		color: #fff;
-		font-weight: 500;
-	}
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  opacity: 0;
+  z-index: 2;
+  transition: 0.7s;
+  p {
+    font-size: 14px;
+    line-height: 21px;
+    color: #fff;
+    font-weight: 500;
+  }
 }
 .tree__price {
-	margin-top: 7px;
-	flex-grow: 1;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	color: #fff;
-	p {
-		&:first-child {
-			line-height: 24px;
-			opacity: 0.6;
-		}
-		&:last-child {
-			font-size: 20px;
-			line-height: 30px;
-		}
-	}
+  margin-top: 7px;
+  flex-grow: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+  p {
+    &:first-child {
+      line-height: 24px;
+      opacity: 0.6;
+    }
+    &:last-child {
+      font-size: 20px;
+      line-height: 30px;
+    }
+  }
 }
 .tree__btn {
-	align-self: flex-start;
+  align-self: flex-start;
+}
+
+.sliders__prev,
+.sliders__next {
+  transform: translate(-50%);
+  left: -32px;
+  background-color: transparent;
+  width: 27px;
+  height: 27px;
+  align-self: center;
+  margin-right: 24px;
+  cursor: pointer;
+}
+.sliders__next {
+  right: 32px;
+  margin-right: 0;
+  margin-left: 24px;
+  transform: rotate(180deg) translate(-50%);
 }
