--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,5 @@
 @import url("../styles/normalize.css");
 html {
-  font-size: 62.5%;
   overflow-x: hidden;
 }
 
@@ -15,6 +14,8 @@ body {
 .container-large {
   max-width: 60.9375vw;
   margin: 0 auto;
+  padding-left: 0.5208333333vw;
+  padding-right: 0.5208333333vw;
 }
 
 .header__wrapper-top .inner {
@@ -22,7 +23,7 @@ body {
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
-  max-width: 125rem;
+  max-width: 65.1041666667vw;
   margin: 0 auto;
 }
 
@@ -32,36 +33,36 @@ body {
 .header p {
   font-family: Raleway;
   font-style: 500;
-  font-size: 1.6rem;
-  line-height: 2.2rem;
+  font-size: 0.8333333333vw;
+  line-height: 1.1458333333vw;
   color: #000;
 }
 .header a {
   font-family: Raleway;
   font-style: 700;
-  font-size: 1.8rem;
-  line-height: 2.2rem;
+  font-size: 0.9375vw;
+  line-height: 1.1458333333vw;
   color: #000;
 }
 .header img {
-  margin: 2rem 0 0 0;
-  height: 7rem;
+  margin: 1.0416666667vw 0 0 0;
+  height: 3.6458333333vw;
 }
 
 .home-icon {
-  height: 3rem;
-  width: 3rem;
+  height: 1.5625vw;
+  width: 1.5625vw;
   color: #fff;
 }
 
 .dropdown {
   font-family: Raleway;
   background-color: #386641;
-  max-width: 192rem;
+  max-width: 100vw;
   position: static;
-  top: 12rem;
-  padding: 0.5rem;
-  border: 0.2rem solid #4caf50;
+  top: 6.25vw;
+  padding: 0.2604166667vw;
+  border: 0.1041666667vw solid #4caf50;
   font-style: 600;
   left: 0;
   right: 0;
@@ -69,7 +70,7 @@ body {
   align-items: center;
   justify-content: space-around;
   z-index: 1000;
-  padding: 1rem 7%;
+  padding: 0.5208333333vw 7%;
 }
 .dropdown .header__wrapper-bottom ul {
   list-style: none;
@@ -79,8 +80,8 @@ body {
   float: left;
 }
 .dropdown .header__wrapper-bottom ul li a {
-  font-size: 1.6rem;
-  padding: 0.8rem;
+  font-size: 0.8333333333vw;
+  padding: 0.4166666667vw;
   color: white;
   display: block;
 }
@@ -91,35 +92,35 @@ body {
 .dropdown .header__wrapper-bottom ul li ul {
   position: absolute;
   left: 0;
-  width: 200px;
+  width: 10.4166666667vw;
   background-color: rgba(56, 102, 65, 0.795);
   display: none;
 }
 .dropdown .header__wrapper-bottom ul li ul li {
   width: 100%;
-  border-top: 1px solid rgba(56, 102, 65, 0.795);
+  border-top: 0.0520833333vw solid rgba(56, 102, 65, 0.795);
 }
 .dropdown .header__wrapper-bottom ul li:hover > ul {
   display: initial;
 }
 
 .section-hero {
-  max-width: 192rem;
+  max-width: 100vw;
   background-color: white;
-  padding: 0 2rem 29.6rem 0;
+  padding: 0 1.0416666667vw 1.5625vw 0;
 }
 .section-hero .btn {
-  margin-left: 35rem;
+  margin-left: 18.2291666667vw;
 }
 
 .section-video {
-  max-width: 192rem;
+  max-width: 100vw;
   background-image: url("../images/Rectangle 101.png");
   margin-top: 0 auto;
   position: relative;
 }
 .section-video .btn {
-  margin-left: 35rem;
+  margin-left: 18.2291666667vw;
 }
 
 .btn {
@@ -128,10 +129,10 @@ body {
   font-family: Raleway;
   background-color: yellow;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.0416666667vw;
   font-weight: 600;
-  padding: 1.6rem 3.2rem;
-  border-radius: 150px;
+  padding: 0.8333333333vw 1.6666666667vw;
+  border-radius: 7.8125vw;
   border: none;
   cursor: pointer;
   transition: all 0.3s;
@@ -143,10 +144,10 @@ body {
   font-family: Raleway;
   background-color: yellow;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.0416666667vw;
   font-weight: 600;
-  padding: 1.6rem 3.2rem;
-  border-radius: 150px;
+  padding: 0.8333333333vw 1.6666666667vw;
+  border-radius: 7.8125vw;
   border: none;
   cursor: pointer;
   transition: all 0.3s;
@@ -160,8 +161,8 @@ body {
   text-decoration: none;
   font-size: 2rem;
   font-weight: 600;
-  padding: 1.6rem 3.2rem;
-  border-radius: 150px;
+  padding: 0.8333333333vw 1.6666666667vw;
+  border-radius: 7.8125vw;
   border: none;
   cursor: pointer;
   transition: all 0.3s;
@@ -179,16 +180,16 @@ body {
   padding: 0 auto;
   display: grid;
   grid-template-columns: 2fr 3fr;
-  gap: 9.6rem;
+  gap: 5vw;
   align-items: center;
   justify-content: space-between;
 }
 
 .hero-description {
-  margin-left: 35rem;
-  font-size: 2rem;
+  margin-left: 18.2291666667vw;
+  font-size: 1.0416666667vw;
   line-height: 1.6;
-  margin-bottom: 4.8rem;
+  margin-bottom: 2.5vw;
 }
 
 .hero-img {
@@ -198,32 +199,32 @@ body {
 .heading-primary {
   font-weight: 700;
   color: #333;
-  letter-spacing: -0.5px;
-  font-size: 5.2rem;
+  letter-spacing: -0.0260416667vw;
+  font-size: 2.7083333333vw;
   line-height: 1.05;
-  margin-left: 35rem;
-  margin-top: 3.2rem;
-  margin-bottom: 3.2rem;
+  margin-left: 18.2291666667vw;
+  margin-top: 1.6666666667vw;
+  margin-bottom: 1.6666666667vw;
 }
 
 .tag-title {
-  font-size: 2.2rem;
+  font-size: 1.1458333333vw;
   line-height: 1.05;
-  margin-left: 35rem;
-  margin-top: 3.2rem;
-  margin-bottom: 3.2rem;
+  margin-left: 18.2291666667vw;
+  margin-top: 1.6666666667vwx;
+  margin-bottom: 1.6666666667vwx;
 }
 
 .section-quality {
-  max-width: 192rem;
+  max-width: 100vw;
   padding: 0 auto;
   background-color: #dce4cc;
 }
 
 .container {
-  font-size: 1.4rem;
+  font-size: 0.7291666667vw;
   text-transform: uppercase;
-  letter-spacing: 0.75px;
+  letter-spacing: 0.0390625vw;
   font-weight: 500;
   text-align: center;
   color: #888;
@@ -243,10 +244,10 @@ body {
   align-items: center;
 }
 .section-testimonials .hero-description {
-  font-size: 1.6rem;
-  padding-top: 2.6rem;
-  margin-left: 1rem;
-  margin-right: 35rem;
+  font-size: 0.8333333333vw;
+  padding-top: 1.3541666667vw;
+  margin-left: 0.5208333333vw;
+  margin-right: 18.2291666667vw;
 }
 
 .color {
@@ -254,7 +255,7 @@ body {
 }
 
 .testimonials-container {
-  padding: 2.6rem;
+  padding: 1.3541666667vw;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -262,10 +263,10 @@ body {
 .gallery {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 1.6rem;
-  padding: 1.6rem;
-  padding-left: 35rem;
-  padding-right: 35rem;
+  gap: 0.8333333333vw;
+  padding: 0.8333333333vw;
+  padding-left: 19.2708333333vw;
+  padding-right: 19.2708333333vw;
 }
 
 .gallery-item {
@@ -279,11 +280,11 @@ body {
 .gallery-content {
   font-family: Raleway;
   font-style: 500;
-  font-size: 1.6rem;
-  line-height: 2.2rem;
+  font-size: 0.8333333333vw;
+  line-height: 1.1458333333vw;
   color: #000;
-  min-height: 60px;
-  padding: 0 44px 0 20px;
+  min-height: 3.125vw;
+  padding: 0 2.2916666667vw 0 1.0416666667vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -294,8 +295,8 @@ body {
 .tag {
   display: block;
   font-weight: 700;
-  font-size: 18px;
-  line-height: 2.2rem;
+  font-size: 0.9375vw;
+  line-height: 1.1458333333vw;
   color: #202020;
 }
 
@@ -311,36 +312,36 @@ body {
 .video {
   display: grid;
   grid-template-columns: 1fr 3fr;
-  gap: 9.6rem;
+  gap: 5vw;
   align-items: center;
   justify-content: space-between;
 }
 
 .video-primary {
-  font-size: 5.2rem;
+  font-size: 2.7083333333vw;
   line-height: 1.05;
-  margin-left: 35rem;
-  margin-right: 10rem;
-  margin-top: 3.2rem;
-  margin-bottom: 3.2rem;
+  margin-left: 18.2291666667vw;
+  margin-right: 5.2083333333vw;
+  margin-top: 1.6666666667vw;
+  margin-bottom: 1.6666666667vw;
   white-space: nowrap;
 }
 
 .video-description {
-  margin-left: 35rem;
-  font-size: 2rem;
+  margin-left: 18.2291666667vw;
+  font-size: 1.0416666667vw;
   line-height: 1.6;
-  margin-bottom: 2.8rem;
+  margin-bottom: 1.4583333333vw;
 }
 
 .video-img {
   width: 70%;
-  border: 20px solid white;
+  border: 1.0416666667vw solid white;
 }
 
 .video-text-box {
   color: white;
-  padding: 1.6rem;
+  padding: 0.8333333333vw;
   display: flexbox;
 }
 
@@ -351,8 +352,8 @@ span {
 
 .vector-img {
   position: absolute;
-  bottom: 20rem;
-  right: 45rem;
+  bottom: 10.4166666667vw;
+  right: 23.4375vw;
   width: 1.5%;
 }
 
@@ -360,50 +361,54 @@ span {
   background: #f5f5f5;
 }
 .favorites h2 {
-  font-size: 44px;
-  line-height: 52px;
+  font-size: 2.2916666667vw;
+  line-height: 2.7083333333vw;
   color: #202020;
-  margin-bottom: 50px;
+  margin-bottom: 2.6041666667vw;
+}
+
+.container-large {
+  padding-left: 0.5208333333vw;
+  padding-right: 0.5208333333vw;
 }
 
 .favorites__body {
-  padding: 60px 0;
+  padding: 3.125vw 0;
   text-align: center;
   width: 60.9375vw;
 }
 
 .favorites__carousel {
-  margin-bottom: 30px;
+  margin-bottom: 1.5625vw;
   display: flex;
 }
 
 .tree {
   flex-shrink: 0;
-  margin: 0 auto;
+  /*margin: 0 auto;*/
+  margin: 0 0.2604166667vw;
+  background-size: 140px 220px;
 }
 
 .tree__body {
   margin: 0 auto;
   position: relative;
-  padding: 30px 30px 25px;
+  padding: 1.5625vw 1.5625vw 1.3020833333vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 285px;
-  height: 410px;
+  width: 14.84375vw;
+  height: 21.3541666667vw;
   background-color: #eee;
-  border-radius: 10px;
+  border-radius: 0.5208333333vw;
   transition: 0.7s;
-  background-size: 11.5625vw;
-  background-repeat: no-repeat;
-  background-position: bottom;
 }
 .tree__body h3 {
   font-weight: 700;
-  font-size: 22px;
-  line-height: 30px;
+  font-size: 1.1458333333vw;
+  line-height: 1.5625vw;
   color: #202020;
-  margin-bottom: 15px;
+  margin-bottom: 0.78125vw;
 }
 .tree__body:hover {
   background: #386641;
@@ -415,13 +420,9 @@ span {
   opacity: 0.4;
 }
 
-#tree_1 {
-  background-image: url("../images/carousel/carousel_2.png");
-}
-
 .tree__img {
   position: absolute;
-  width: 225px;
+  width: 11.71875vw;
   bottom: 0;
   z-index: 1;
   transition: 0.7s;
@@ -442,14 +443,14 @@ span {
   transition: 0.7s;
 }
 .tree__hover p {
-  font-size: 14px;
-  line-height: 21px;
+  font-size: 0.7291666667vw;
+  line-height: 1.09375vw;
   color: #fff;
   font-weight: 500;
 }
 
 .tree__price {
-  margin-top: 7px;
+  margin-top: 0.3645833333vw;
   flex-grow: 1;
   display: flex;
   justify-content: space-between;
@@ -457,12 +458,12 @@ span {
   color: #fff;
 }
 .tree__price p:first-child {
-  line-height: 24px;
+  line-height: 1.25vw;
   opacity: 0.6;
 }
 .tree__price p:last-child {
-  font-size: 20px;
-  line-height: 30px;
+  font-size: 1.0416666667vw;
+  line-height: 1.5625vw;
 }
 
 .tree__btn {
@@ -472,18 +473,18 @@ span {
 .sliders__prev,
 .sliders__next {
   transform: translate(-50%);
-  left: -32px;
+  left: -1.6666666667vw;
   background-color: transparent;
-  width: 27px;
-  height: 27px;
+  width: 1.40625vw;
+  height: 1.40625vw;
   align-self: center;
-  margin-right: 24px;
+  margin-right: 1.25vw;
   cursor: pointer;
 }
 
 .sliders__next {
-  right: 32px;
+  right: 1.6666666667vw;
   margin-right: 0;
-  margin-left: 24px;
+  margin-left: 1.25vw;
   transform: rotate(180deg) translate(-50%);
 }/*# sourceMappingURL=main.css.map */
