--- a/styles/main.css
+++ b/styles/main.css
@@ -113,16 +113,6 @@ body {
   margin-left: 18.2291666667vw;
 }
 
-.section-video {
-  max-width: 100vw;
-  background-image: url("../images/Rectangle 101.png");
-  margin-top: 0 auto;
-  position: relative;
-}
-.section-video .btn {
-  margin-left: 18.2291666667vw;
-}
-
 .btn {
   display: inline-block;
   font-style: 600;
@@ -238,12 +228,12 @@ body {
   height: 100%;
 }
 
-.section-testimonials {
+.section-services {
   background-image: url("../images/image 32.png");
   grid-template-rows: 0.5fr 2fr;
   align-items: center;
 }
-.section-testimonials .hero-description {
+.section-services .hero-description {
   font-size: 0.8333333333vw;
   padding-top: 1.3541666667vw;
   margin-left: 0.5208333333vw;
@@ -254,7 +244,7 @@ body {
   background-color: rgba(242, 248, 244, 0.884);
 }
 
-.testimonials-container {
+.services-container {
   padding: 1.3541666667vw;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -307,6 +297,16 @@ body {
 }
 .gallery-transform:hover {
   transform: scale(1.05);
+}
+
+.section-video {
+  max-width: 100vw;
+  background-image: url("../images/Rectangle 101.png");
+  margin-top: 0 auto;
+  position: relative;
+}
+.section-video .btn {
+  margin-left: 18.2291666667vw;
 }
 
 .video {
@@ -387,7 +387,7 @@ span {
   flex-shrink: 0;
   /*margin: 0 auto;*/
   margin: 0 0.2604166667vw;
-  background-size: 140px 220px;
+  background-size: 7.2916666667vw 11.4583333333vw;
 }
 
 .tree__body {
@@ -487,4 +487,211 @@ span {
   margin-right: 0;
   margin-left: 1.25vw;
   transform: rotate(180deg) translate(-50%);
+}
+
+/*Testimonaals*/
+.testimonials {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.524), rgba(0, 0, 0, 0.7)), url("../images/Rectangle 101.png") no-repeat;
+  background-size: cover;
+}
+.testimonials__body {
+  margin: 0 auto;
+  padding: 3.125vw 0;
+  display: flex;
+  color: #fff;
+  font-size: 1.25vw;
+  line-height: 1.875vw;
+}
+
+.testimonial__body {
+  max-width: 52.0833333333vw;
+  margin: 0 auto;
+  text-align: center;
+}
+.testimonial__head {
+  margin-bottom: 2.0833333333vw;
+}
+.testimonial__img {
+  margin: 0 auto;
+  width: 5.2083333333vw;
+  height: 5.2083333333vw;
+  border-radius: 50%;
+  overflow: hidden;
+  background: #478152;
+  flex-shrink: 0;
+}
+.testimonial__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.testimonial__name h3 {
+  font-weight: 600;
+  letter-spacing: 0.05em;
+}
+.testimonial__stars {
+  text-align: center;
+  letter-spacing: 0.5208333333vw;
+  color: #ffd401;
+}
+.testimonial__text {
+  margin-bottom: 1.5625vw;
+  font-weight: 500;
+  text-align: center;
+  text-shadow: 0vw 0vw 0.2083333333vw rgba(0, 0, 0, 0.25);
+}
+
+.testimonials__prev,
+.testimonials__next {
+  transform: translate(-50%);
+  left: -1.6666666667vw;
+  background-color: transparent;
+  width: 1.40625vw;
+  height: 1.40625vw;
+  align-self: center;
+  margin-right: 1.25vw;
+  cursor: pointer;
+}
+
+.testimonials__next {
+  right: 1.6666666667vw;
+  margin-right: 0;
+  margin-left: 1.25vw;
+  transform: rotate(180deg) translate(-50%);
+}
+
+/* Subscribe*/
+.subscribe {
+  background: url("../images/image 32.png") no-repeat;
+  background-size: cover;
+}
+.subscribe__body {
+  padding: 50px 0 60px;
+  text-align: center;
+  margin-right: 300px;
+  margin-left: 300px;
+}
+.subscribe__body h3 {
+  font-size: 44px;
+  line-height: 52px;
+  font-weight: 500;
+  margin-bottom: 50px;
+}
+.subscribe__body span {
+  font-weight: 700;
+  color: #a9d16a;
+}
+.subscribe__row {
+  position: relative;
+  height: 54px;
+}
+.subscribe__row input {
+  width: 100%;
+  padding: 16px 18px 16px 16px;
+  border-radius: 28px;
+  background: #dadada;
+  font-size: 18px;
+  line-height: 22px;
+  color: #4b4b4b;
+  outline: none;
+}
+.subscribe__row button {
+  min-height: 54px;
+  min-width: 230px;
+  border-radius: 140px;
+}
+.subscribe__btn {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+/* FOOTER*/
+.footer {
+  background: #fff;
+}
+.footer__widgets {
+  padding: 50px 0 54px;
+}
+.footer__copyright {
+  padding: 15px 0;
+  background: #454751;
+  font-weight: 400;
+}
+.footer__row {
+  text-align: center;
+}
+.footer__text, .footer__text a {
+  font-size: 14px;
+  line-height: 26px;
+  color: #c0c0c0;
+}
+.footer__text a:hover, .footer__text a a:hover {
+  color: #fff;
+}
+.footer__terms, .footer__terms a {
+  font-size: 12px;
+  line-height: 20px;
+  color: #adbdcc;
+}
+.footer__terms a:hover, .footer__terms a a:hover {
+  color: #fff;
+}
+
+.widget a {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 35px;
+  color: #000;
+}
+.widget a:hover {
+  text-decoration: underline;
+  color: #386641;
+}
+.widget__body {
+  margin-bottom: 35px;
+  line-height: 26px;
+}
+.widget__body h2,
+.widget__body h3 {
+  margin-bottom: 15px;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19px;
+  color: #386641;
+  text-transform: uppercase;
+}
+.widget__body li {
+  line-height: 35px;
+}
+.widget__body p {
+  margin-bottom: 35px;
+}
+.widget__body p:last-child {
+  margin-bottom: 0;
+}
+.widget__body--right {
+  text-align: left;
+  margin-bottom: 0;
+}
+.widget__socials {
+  display: flex;
+  justify-content: center;
+}
+.widget__socials-ithem {
+  flex-shrink: 0;
+  margin: 6px;
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  background: #ffd401;
+  transition: 0.7s;
+}
+.widget__socials-ithem:hover {
+  background: #386641;
+}
+.widget__socials-ithem img {
+  margin: 11px;
+  width: 20px;
+  height: 20px;
 }/*# sourceMappingURL=main.css.map */
