--- a/scss/main.scss
+++ b/scss/main.scss
@@ -558,16 +558,16 @@ span {
   background-size: cover;
 
   &__body {
-    padding: 50px 0 60px;
+    padding: 50 / $width * 100vw 0 60 / $width * 100vw;
     text-align: center;
-    margin-right: 300px;
-    margin-left: 300px;
+    margin-right: 300 / $width * 100vw;
+    margin-left: 300 / $width * 100vw;
 
     h3 {
-      font-size: 44px;
-      line-height: 52px;
+      font-size: 44 / $width * 100vw;
+      line-height: 52 / $width * 100vw;
       font-weight: 500;
-      margin-bottom: 50px;
+      margin-bottom: 50 / $width * 100vw;
     }
     span {
       font-weight: 700;
@@ -577,22 +577,23 @@ span {
 
   &__row {
     position: relative;
-    height: 54px;
+    height: 54 / $width * 100vw;
 
     input {
       width: 100%;
-      padding: 16px 18px 16px 16px;
-      border-radius: 28px;
+      padding: 16 / $width * 100vw 18 / $width * 100vw 16 / $width * 100vw 16 /
+        $width * 100vw;
+      border-radius: 28 / $width * 100vw;
       background: #dadada;
-      font-size: 18px;
-      line-height: 22px;
+      font-size: 18 / $width * 100vw;
+      line-height: 22 / $width * 100vw;
       color: #4b4b4b;
       outline: none;
     }
     button {
-      min-height: 54px;
-      min-width: 230px;
-      border-radius: 140px;
+      min-height: 54 / $width * 100vw;
+      min-width: 230 / $width * 100vw;
+      border-radius: 140 / $width * 100vw;
     }
   }
   &__btn {
@@ -608,10 +609,10 @@ span {
   background: #fff;
 
   &__widgets {
-    padding: 50px 0 54px;
+    padding: 50 / $width * 100vw 0 54 / $width * 100vw;
   }
   &__copyright {
-    padding: 15px 0;
+    padding: 15 / $width * 100vw 0;
     background: #454751;
     font-weight: 400;
   }
@@ -621,8 +622,8 @@ span {
 
   &__text,
   &__text a {
-    font-size: 14px;
-    line-height: 26px;
+    font-size: 14 / $width * 100vw;
+    line-height: 26 / $width * 100vw;
     color: #c0c0c0;
 
     a:hover {
@@ -632,8 +633,8 @@ span {
 
   &__terms,
   &__terms a {
-    font-size: 12px;
-    line-height: 20px;
+    font-size: 12 / $width * 100vw;
+    line-height: 20 / $width * 100vw;
     color: #adbdcc;
     a:hover {
       color: #fff;
@@ -644,8 +645,8 @@ span {
 .widget {
   a {
     font-weight: 500;
-    font-size: 16px;
-    line-height: 35px;
+    font-size: 16 / $width * 100vw;
+    line-height: 35 / $width * 100vw;
     color: #000;
     &:hover {
       text-decoration: underline;
@@ -654,25 +655,25 @@ span {
   }
 
   &__body {
-    margin-bottom: 35px;
-    line-height: 26px;
+    margin-bottom: 35 / $width * 100vw;
+    line-height: 26 / $width * 100vw;
 
     h2,
     h3 {
-      margin-bottom: 15px;
-      font-size: 16px;
+      margin-bottom: 15 / $width * 100vw;
+      font-size: 16 / $width * 100vw;
       font-weight: 700;
-      line-height: 19px;
+      line-height: 19 / $width * 100vw;
       color: #386641;
       text-transform: uppercase;
     }
 
     li {
-      line-height: 35px;
+      line-height: 35 / $width * 100vw;
     }
 
     p {
-      margin-bottom: 35px;
+      margin-bottom: 35 / $width * 100vw;
       &:last-child {
         margin-bottom: 0;
       }
@@ -690,9 +691,9 @@ span {
 
   &__socials-ithem {
     flex-shrink: 0;
-    margin: 6px;
-    width: 42px;
-    height: 42px;
+    margin: 6 / $width * 100vw;
+    width: 42 / $width * 100vw;
+    height: 42 / $width * 100vw;
     border-radius: 50%;
     background: #ffd401;
     transition: 0.7s;
@@ -701,9 +702,9 @@ span {
     }
 
     img {
-      margin: 11px;
-      width: 20px;
-      height: 20px;
+      margin: 11 / $width * 100vw;
+      width: 20 / $width * 100vw;
+      height: 20 / $width * 100vw;
     }
   }
 }
