--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,41 +18,50 @@ body {
   padding-left: 10 / $width * 100vw;
   padding-right: 10 / $width * 100vw;
 }
-.header__wrapper-top {
-  .inner {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1250 / $width * 100vw;
-    margin: 0 auto;
-  }
-}
 .header {
-  .inner {
-    .item {
-      width: max-content;
+  &__wrapper-top {
+    padding: 20px 0 0;
+    &__row {
+      padding-bottom: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: nowrap;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 1250 / $width * 100vw;
+      margin: 0 auto;
+      color: #000;
+    }
+    &__logo {
+      text-align: center;
+      img {
+        height: 99px;
+      }
+      p {
+        text-transform: uppercase;
+        color: #000;
+      }
     }
   }
-  p {
-    font-family: Raleway;
-    font-style: 500;
-    font-size: 16 / $width * 100vw;
-    line-height: 22 / $width * 100vw;
+  &__adress,
+  &__work-time {
+    display: none;
     color: #000;
   }
-  a {
-    font-family: Raleway;
-    font-style: 700;
-    font-size: 18 / $width * 100vw;
-    line-height: 22 / $width * 100vw;
-    color: #000;
+}
+.telephone,
+.telephone a {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-decoration: none;
+  color: #202020;
+  text-align: end;
+  transition: 0.5s;
+  &:hover {
     text-decoration: none;
-    text-align: right;
-  }
-  img {
-    margin: 20 / $width * 100vw 0 0 0;
-    height: 70 / $width * 100vw;
+    color: #386641;
   }
 }
 .home-icon {
